add content provider + sqlite db

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
             </activity>
+        <provider
+            android:authorities="com.example.christina.sunshine"
+            android:name=".data.WeatherProvider" />
     </application>
 
 </manifest>
